--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
 </head>
 <body>
     
-    <form action="weatherForm">
+    <form class="weatherForm">
         <input type="text" class="cityInput" placeholder="Ingresar ciudad">
         <button type="submit">Buscar</button>
     </form>
 
-    <div class="card">
+    <div class="card" style="display: none;">
         <h1 class="cityDisplay">Miami</h1>
         <p class="tempDisplay"> 90 F</p>
         <p class="humidityDisplay"> Humidity: 75%</p>
